A few bug correction + Warmup + using librosa for preprocessing

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -12,11 +12,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Add the root project folder to the python path in order to use the packages\n",
-    "path_root = Path( '/project_ghent/HADSP/hadsp/')\n",
-    "sys.path.append(str(path_root))"
+    "from pathlib import Path"
    ]
   },
   {
@@ -66,17 +62,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e615afe6-6dd7-4a62-93dd-503c0f984c6c",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "a39f7f6e-b389-4194-96c4-3ff96da84376",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-03T20:08:07.161806Z",
+     "iopub.status.busy": "2024-07-03T20:08:07.161698Z",
+     "iopub.status.idle": "2024-07-03T20:08:07.848549Z",
+     "shell.execute_reply": "2024-07-03T20:08:07.848227Z",
+     "shell.execute_reply.started": "2024-07-03T20:08:07.161798Z"
+    }
+   },
    "source": [
     "from aeon.datasets import load_classification\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
-    "X_train_unprocessed, Y_train_raw, meta_data = load_classification(\"SpokenArabicDigits\", return_metadata=True, load_equal_length = False, split=\"train\")\n",
-    "X_test_unprocessed, Y_test_raw, meta_data = load_classification(\"SpokenArabicDigits\", return_metadata=True, load_equal_length = False, split=\"test\")\n",
+    "dataset_name = \"SpokenArabicDigits\"\n",
+    "\n",
+    "X_train_unprocessed, Y_train_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"train\")\n",
+    "X_test_unprocessed, Y_test_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"test\")\n",
     "\n",
     "is_instances_classification = True\n",
     "sampling_rate = 10000\n",
@@ -180,14 +184,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "a5707b5e-116c-4bd0-9f92-136f5d6ae8cd",
+   "id": "db9fd738-3a57-4ac5-8543-ea9e00535acb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-24T07:35:44.122065Z",
-     "iopub.status.busy": "2024-06-24T07:35:44.121971Z",
-     "iopub.status.idle": "2024-06-24T07:35:45.328972Z",
-     "shell.execute_reply": "2024-06-24T07:35:45.328696Z",
-     "shell.execute_reply.started": "2024-06-24T07:35:44.122057Z"
+     "iopub.execute_input": "2024-07-03T14:25:55.172311Z",
+     "iopub.status.busy": "2024-07-03T14:25:55.172209Z",
+     "iopub.status.idle": "2024-07-03T14:25:56.300514Z",
+     "shell.execute_reply": "2024-07-03T14:25:56.300235Z",
+     "shell.execute_reply.started": "2024-07-03T14:25:55.172303Z"
     }
    },
    "source": [
@@ -224,29 +228,39 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "06785506-5aea-41a8-b8ff-ee2476c949b3",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e7a7b8d-1962-4640-87e8-3dfc46c5e691",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"JapaneseVowels\"\n",
+    "dataset_name = \"HAART\"\n",
     "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
+    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2270ca-689b-41b4-9789-70f93865a393",
+   "id": "2702d394-05c1-41bf-8e6e-f4d9753ded29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e4f2f50-769a-4adb-9548-20d006541cbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets.preprocessing import plot_data_distribution\n",
     "\n",
-    "plot_data_distribution(Y_train_raw, Y_test, val = True)"
+    "plot_data_distribution(Y_train_raw, Y_test, val = False)"
    ]
   },
   {
@@ -272,8 +286,6 @@
     "SEED = 49387\n",
     "\n",
     "\n",
-    "val_per=0.2\n",
-    "val_size = int(len(X_train_raw)*val_per)\n",
     "if is_instances_classification:\n",
     "    if groups is None:\n",
     "        splits = StratifiedKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
@@ -288,7 +300,7 @@
     "    Y_train = flexible_indexing(Y_train_raw, train_index)\n",
     "    Y_val = flexible_indexing(Y_train_raw, val_index)\n",
     "    # SPLITS\n",
-    "    if is_multivariate:\n",
+    "    if is_multivariate and not is_instances_classification:\n",
     "        X_train_band, X_val_band, X_test_band = X_train, X_val, X_test_raw\n",
     "        del X_train, X_val\n",
     "    else:\n",
@@ -304,7 +316,7 @@
    "source": [
     "from datasets.preprocessing import plot_data_distribution\n",
     "\n",
-    "plot_data_distribution(Y_train, Y_test, val = True)"
+    "plot_data_distribution(Y_train, Y_val, val = True)"
    ]
   },
   {
@@ -344,7 +356,7 @@
    "source": [
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
     "\n",
-    "freq_train_data = X_train_band if is_multivariate else X_train\n",
+    "freq_train_data = X_train_band if is_multivariate and not is_instances_classification else X_train\n",
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "\n",
     "WINDOW_LENGTH = 10\n",
@@ -368,15 +380,15 @@
    "source": [
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
     "\n",
-    "if not is_multivariate:\n",
+    "if is_instances_classification:\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
+    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1, spectral_representation=\"stft\", hop=100\n",
     "    )\n",
     "    X_val_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
+    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1, spectral_representation=\"stft\", hop=100\n",
     "    )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
+    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1, spectral_representation=\"stft\", hop=100\n",
     "    )"
    ]
   },
@@ -395,7 +407,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not is_instances_classification:\n",
+    "import librosa \n",
+    "\n",
+    "if is_instances_classification:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    img = librosa.display.specshow(librosa.amplitude_to_db(X_train_raw[0], ref=np.max), y_axis='log', x_axis='time', ax=ax)\n",
+    "    ax.set_title('Power spectrogram')\n",
+    "    fig.colorbar(img, ax=ax, format=\"%+2.0f dB\")\n",
+    "else:\n",
     "    # Concatenate train and test arrays for plotting\n",
     "    combined_data = np.concatenate((X_train_band, X_val_band), axis=0)\n",
     "    combined_Y =np.concatenate((Y_train, Y_val), axis=0)\n",
@@ -618,12 +637,6 @@
     "else:\n",
     "    train_band_data =  X_train_band.T\n",
     "\n",
-    "#Compute the moving average \n",
-    "window_size = 10\n",
-    "if max_window_size <= window_size or  window_size <= min_window_size:\n",
-    "    raise ValueError(f\"window_size must be greater than {min_window_size} and smaller than {max_window_size}. Current window_size is {window_size}.\")\n",
-    "weights = np.repeat(1.0, window_size)/window_size\n",
-    "ma = np.array([np.convolve(d, weights, 'valid') for d in (train_band_data)])\n",
     "\n",
     "START = 0\n",
     "END = 200\n",
@@ -635,7 +648,6 @@
     "fig, ax = plt.subplots(len(NBs), 1, figsize=(24, 6 * len(NBs)))\n",
     "for i, NB in enumerate(NBs):\n",
     "    ax[i].plot(range(DIFF), train_band_data[NB, START:END], label=peak_freqs[NB])\n",
-    "    #ax[i].plot(range(DIFF), ma[NB, START:END], label='Moving average')\n",
     "    ax[i].legend(fontsize=26)\n",
     "    ax[i].set_title(f'Plot for NB = {NB}')\n",
     "\n",
@@ -740,17 +752,20 @@
    "outputs": [],
    "source": [
     "TIME_INCREMENT = 10 # int(max_window_size) or int(min_window_size+1)\n",
-    "MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None  or TIME_INCREMENT\n",
-    "WEIGHT_INCREMENT = 0.02\n",
+    "MAX_TIME_INCREMENT = 14 #int(max_window_size) or None  or TIME_INCREMENT\n",
+    "WEIGHT_INCREMENT = 0.038\n",
     "target_rate = 0.7\n",
     "RATE_SPREAD = 0.06\n",
     "\n",
-    "variance_target = 0.009\n",
-    "variance_spread = 0.008\n",
+    "min_variance = 0.19\n",
+    "variance_spread = 0.003\n",
     "\n",
     "bias_scaling = 0.01\n",
-    "input_scaling = 0.01\n",
+    "input_scaling = 0.135\n",
     "leaky_rate = 1\n",
+    "\n",
+    "intrinsic_saturation = 0.9\n",
+    "intrinsic_coef = 0.8\n",
     "\n",
     "if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
     "    raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
@@ -836,12 +851,13 @@
     "    if function_name == \"hadsp\":\n",
     "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, np.tanh, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "                              target_rate, RATE_SPREAD, function_name, is_instance=is_instances_classification, use_full_instance = False, max_increment=MAX_TIME_INCREMENT, \n",
-    "                                                          max_partners=12, method = \"random\", n_jobs = 12, visualize=False, record_history=True)\n",
+    "                                                          max_partners=12, method = \"pearson\", n_jobs = 12, visualize=False, record_history=True)\n",
     "        variance_history=None\n",
     "    elif function_name == \"desp\":\n",
     "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, np.tanh, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                            variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, max_increment=MAX_TIME_INCREMENT, \n",
-    "                                                          max_partners=12, method = \"pearson\", n_jobs = 12, visualize=False, record_history=True)\n",
+    "                            min_variance, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
+    "                            max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"pearson\", \n",
+    "                            intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = 12, visualize=False, record_history=True)\n",
     "\n",
     "    connectivity =  np.count_nonzero(W) / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
@@ -900,6 +916,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e041190-1f47-4252-bfe4-6c55e894ba11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_history = np.array(state_history_multi)\n",
+    "\n",
+    "n_time_points, n_neurons = state_history.shape\n",
+    "mean_correlations = []\n",
+    "\n",
+    "# Define the window size for the correlation calculation\n",
+    "size_window = 1000\n",
+    "# Define step size for moving the window; this is optional, set to 1 for a classic rolling window\n",
+    "step_size = int(size_window/10)  \n",
+    "\n",
+    "# Calculate the number of possible windows based on the step size\n",
+    "num_windows = (n_time_points - size_window) // step_size + 1\n",
+    "\n",
+    "# Sliding window approach\n",
+    "for i in range(num_windows):\n",
+    "    # Calculate the start index for each window\n",
+    "    start_index = i * step_size\n",
+    "    # Extract the window of data\n",
+    "    window = state_history[start_index:start_index + size_window, :]\n",
+    "    \n",
+    "    # Compute the Pearson correlation matrix for the current window\n",
+    "    correlation_matrix = np.corrcoef(window, rowvar=False)\n",
+    "    \n",
+    "    # Compute the mean correlation, excluding the diagonal\n",
+    "    mean_corr = np.mean(correlation_matrix[np.triu_indices(n_neurons, k=1)])\n",
+    "    mean_correlations.append(mean_corr)\n",
+    "\n",
+    "# Plotting the mean correlations\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(mean_correlations, marker='.', linestyle='-', color='b')\n",
+    "plt.title('Rolling Mean Pearson Correlation Between Neurons')\n",
+    "plt.xlabel('Time Window')\n",
+    "plt.ylabel('Mean Correlation')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "22be4078-9172-48f0-b39f-9b9c634c136e",
    "metadata": {},
    "outputs": [],
@@ -940,8 +1000,8 @@
     "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=4)) #Size max is 19 because there is not enough colors\n",
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
-    "WATCH_FROM = 2000\n",
-    "WATCH_TO = 4000\n",
+    "WATCH_FROM = 10000\n",
+    "WATCH_TO = 15000\n",
     "neurons_evolution = np.array(state_history_multi)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -1124,7 +1184,7 @@
     "from sklearn.metrics import mutual_info_score\n",
     "\n",
     "N_JOBS = -1\n",
-    "RIDGE_COEF= 1e-6"
+    "RIDGE_COEF= 1e-2"
    ]
   },
   {
@@ -1133,6 +1193,17 @@
    "metadata": {},
    "source": [
     "## Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08537a67-9097-4930-b5af-29659c8cfdc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not is_instances_classification:\n",
+    "    raise ValueError(\"This is not the right Classification section.\")"
    ]
   },
   {
@@ -1195,13 +1266,13 @@
    "source": [
     "from performances.esn_model_evaluation import predict_model_for_classification, compute_score\n",
     "\n",
-    "test_data_multi_noisy = X_test_band_noisy # X_test_band_noisy or X_test_band\n",
+    "test_data_multi_noisy = X_val_band_noisy # X_test_band_noisy or X_test_band\n",
     "\n",
     "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi_noisy, N_JOBS)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_val, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
     "\n",
     "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi_noisy, N_JOBS)\n",
-    "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
+    "score = compute_score(Y_pred_random_multi, Y_val, is_instances_classification, \"random multi\", verbosity=1)"
    ]
   },
   {
@@ -1220,13 +1291,13 @@
    "outputs": [],
    "source": [
     "\n",
-    "test_data_multi = X_test_band # X_test_band_noisy or X_test_band\n",
+    "test_data_multi = X_val_band # X_test_band_noisy or X_test_band\n",
     "\n",
     "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, -1)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_val, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
     "\n",
     "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
-    "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
+    "score = compute_score(Y_pred_random_multi, Y_val, is_instances_classification, \"random multi\", verbosity=1)"
    ]
   },
   {
@@ -1815,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c43a3138-e1fd-497f-b380-dcf350a3faa9",
+   "id": "d995e386-8847-4da0-8197-c73ff68179bb",
    "metadata": {},
    "outputs": [],
    "source": []
