--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -3,38 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "754c1d64",
-   "metadata": {
-    "is_executing": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Add the root project folder to the python path in order to use the packages\n",
-    "#path_root = Path( '/project_ghent/HADSP/hadsp/')\n",
-    "#sys.path.append(str(path_root))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "88f790cf",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-23T14:04:18.164863Z",
-     "start_time": "2023-10-23T14:04:18.160678Z"
+    "jupyter": {
+     "is_executing": true
     },
     "tags": []
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from seaborn import heatmap, color_palette\n",
     "\n",
     "SEED = 923984"
    ]
@@ -66,11 +46,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d17896a5-1bd7-4924-91ca-53ca0265658a",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "c19d1e70-94ad-4868-8a8c-51ac2457a837",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-05T09:43:19.546892Z",
+     "iopub.status.busy": "2024-07-05T09:43:19.545856Z",
+     "iopub.status.idle": "2024-07-05T09:43:20.615446Z",
+     "shell.execute_reply": "2024-07-05T09:43:20.615170Z",
+     "shell.execute_reply.started": "2024-07-05T09:43:19.546866Z"
+    }
+   },
    "source": [
     "from aeon.datasets import load_classification\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -189,7 +175,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a363d1a6-8e31-49ca-a2a8-3602b4e8b9c4",
+   "id": "c9863f61-12b5-45a8-bbb0-4531fc27a6cd",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-06-24T06:31:21.296121Z",
@@ -234,22 +220,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "00d6d077-a100-4ee9-94b7-2d5297e3f38d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-24T14:23:42.690132Z",
-     "iopub.status.busy": "2024-06-24T14:23:42.690048Z",
-     "iopub.status.idle": "2024-06-24T14:23:44.899401Z",
-     "shell.execute_reply": "2024-06-24T14:23:44.898978Z",
-     "shell.execute_reply.started": "2024-06-24T14:23:42.690125Z"
-    },
-    "scrolled": true
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bcc4da-a87f-44e0-ae38-155181df0ae5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"HAART\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name, seed=SEED)"
    ]
@@ -374,10 +353,10 @@
     "    if not is_multivariate:\n",
     "        common_size = len(filtered_peak_freqs)\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            filtered_peak_freqs, x_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
+    "            filtered_peak_freqs, x_train, sampling_rate, is_instances_classification, nb_jobs=-1, spectral_representation=\"stft\", hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            filtered_peak_freqs, x_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True, hop=100\n",
+    "            filtered_peak_freqs, x_val, sampling_rate, is_instances_classification, nb_jobs=-1, spectral_representation=\"stft\", hop=100\n",
     "        )\n",
     "\n",
     "    if not is_multivariate:\n",
@@ -419,7 +398,7 @@
     "        X_val_band_noisy.append(add_noise(x_val_band, noise_std))\n",
     "\n",
     "    # Define the number of instances you want to select\n",
-    "    x_size = len(X_train_band) if is_multivariate else len(X_train)\n",
+    "    x_size = len(x_train_band) if is_multivariate else len(x_train)\n",
     "    num_samples_for_pretrain = 500 if x_size >= 500 else x_size\n",
     "    random_indices = np.random.choice(x_size, num_samples_for_pretrain, replace=False)\n",
     "\n",
@@ -466,8 +445,8 @@
     "SLICE_RANGE = slice(start_step, end_step)\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
-    "N_JOBS = 4\n",
-    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "nb_jobs_per_trial = 4\n",
+    "function_name = \"desp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
@@ -482,9 +461,6 @@
     "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
     "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "    network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
-    "    weight_increment = trial.suggest_float('weight_increment', 0.001, 0.1, step=0.001)\n",
-    "    max_partners = trial.suggest_int('max_partners', 10, 20)\n",
-    "\n",
     "    ridge = trial.suggest_int('ridge', -15, 1)\n",
     "    RIDGE_COEF = 10**ridge\n",
     "\n",
@@ -493,33 +469,32 @@
     "\n",
     "    # HADSP\n",
     "    if function_name == \"hadsp\":\n",
-    "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "        target_rate = trial.suggest_float('target_rate', 0.5, 1, step=0.01)\n",
     "        rate_spread = trial.suggest_float('rate_spread', 0.01, 0.4, step=0.005)\n",
-    "        TIME_INCREMENT = int(min_window_size+1) # int(min_window_size+1) or int(max_window_size)\n",
-    "        MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None or TIME_INCREMENT\n",
-    "        \n",
-    "        if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
-    "            raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
-    "\n",
     "        method = trial.suggest_categorical(\"method\", [\"random\", \"pearson\"])\n",
     "    # DESP\n",
     "    elif function_name == \"desp\":\n",
-    "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "        variance_target = trial.suggest_float('min_variance', 0.001, 0.02, step=0.001)\n",
     "        variance_spread = trial.suggest_float('variance_spread', 0.001, 0.05, step=0.002)\n",
-    "        TIME_INCREMENT = 40 # int(min_window_size+1) or int(max_window_size)\n",
-    "        MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None or TIME_INCREMENT\n",
-    "                \n",
-    "        if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
-    "            raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
-    "\n",
+    "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
+    "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
     "    elif function_name == \"random\":\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function name: {function_name}\")\n",
+    "\n",
+    "    if function_name == \"hadsp\" or function_name == \"desp\":\n",
+    "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
+    "        weight_increment = trial.suggest_float('weight_increment', 0.001, 0.1, step=0.001)\n",
+    "        max_partners = trial.suggest_int('max_partners', 10, 20)\n",
+    "        use_full_instance = trial.suggest_categorical('use_full_instance', [True, False])\n",
+    "        TIME_INCREMENT = trial.suggest_int('time_increment', int(min_window_size+1), 100) # int(min_window_size+1) or int(max_window_size)\n",
+    "        time_increment_span = trial.suggest_int('time_increment_span', 0, int(max_window_size)-100)\n",
+    "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n",
+    "        if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
+    "            raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
     "\n",
     "\n",
     "    # CROSS-VALIDATION METHODS\n",
@@ -551,12 +526,13 @@
     "\n",
     "        if function_name == \"hadsp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
-    "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = N_JOBS)\n",
+    "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
+    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = nb_jobs_per_trial)\n",
     "        elif function_name == \"desp\":\n",
     "            W, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
-    "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, \n",
-    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = N_JOBS)\n",
+    "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
+    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
+    "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
     "        elif function_name == \"random\":\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
@@ -566,9 +542,9 @@
     "\n",
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
-    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = N_JOBS, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = nb_jobs_per_trial, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
     "            \n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = N_JOBS)\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = nb_jobs_per_trial)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
     "            esn = init_and_train_model_for_prediction(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], RIDGE_COEF)\n",
@@ -587,9 +563,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94a7cbad-31bd-49d2-a3c1-00d9ccb6aaab",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import optuna\n",
@@ -599,15 +573,16 @@
     "def camel_to_snake(name):\n",
     "    str1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
     "    return re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', str1).lower()\n",
-    "\n",
     "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
+    "\n",
     "storage = optuna.storages.RDBStorage(\n",
     "    url=url,\n",
     "    engine_kwargs={\"pool_size\": 20, \"connect_args\": {\"timeout\": 10}},\n",
     ")\n",
     "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
     "print(study_name)\n",
+    "\n",
     "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
@@ -634,24 +609,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9cf04a0-7ee8-44fd-a8e0-cbf632a9a2c9",
-   "metadata": {},
-   "source": [
-    "## Japanese vowels\n",
-    "\n",
-    "### Results, no validation/test\n",
-    "\n",
-    "|           |  HADSP |  DESP  | random |\n",
-    "|-----------|--------|--------|--------|\n",
-    "|  normal   | 0.641  | 0.649  | 0.612  |\n",
-    "|  noisy    | 0.621  | 0.623  | 0.610  | "
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49ee3d4e-e3c6-43fd-9ef8-cf41c858ebac",
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ee3d4e-e3c6-43fd-9ef8-cf41c858ebac",
+   "id": "7b3d64cab7d596f8",
    "metadata": {},
    "outputs": [],
    "source": []
